src/objects/Apttus_Config2__RevenueSplitPolicyEntry__c.object
<CustomObject>
    <description>Represents a single entry in a revenue split policy</description>
    <fields>
        <fullName>Apttus_Config2__DRAccountRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the deferred revenue account rule</description>
        <inlineHelpText>ID of the deferred revenue account rule</inlineHelpText>
        <label>Deferred Revenue Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
                <operation>equals</operation>
                <value>Deferred Revenue Account</value>
            </filterItems>
            <infoMessage>Please select a Deferred Revenue Account Rule</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Revenue Split Policy Entries (Deferred Revenue Account)</relationshipLabel>
        <relationshipName>RevenueSplitPolicyEntriesDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RRAccountRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the recognized revenue account rule</description>
        <inlineHelpText>ID of the recognized revenue account rule</inlineHelpText>
        <label>Recognized Revenue Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
                <operation>equals</operation>
                <value>Recognized Revenue Account</value>
            </filterItems>
            <infoMessage>Please select a Recognized Revenue Account Rule</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Revenue Split Policy Entries (Recognized Revenue Account)</relationshipLabel>
        <relationshipName>RevenueSplitPolicyEntriesRR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RevRecPolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the revenue recognition policy for the product or service</description>
        <inlineHelpText>ID of the revenue recognition policy for the product or service</inlineHelpText>
        <label>Revenue Recognition Policy</label>
        <referenceTo>Apttus_Config2__RevRecPolicy__c</referenceTo>
        <relationshipLabel>Revenue Split Policy Entries</relationshipLabel>
        <relationshipName>RevenueSplitPolicyEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The split policy entry sequence</description>
        <inlineHelpText>The split policy entry sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SplitPercent__c</fullName>
        <description>The revenue split percentage</description>
        <inlineHelpText>The revenue split percentage</inlineHelpText>
        <label>Split Percent</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SplitPolicyId__c</fullName>
        <description>ID of the associated revenue split policy</description>
        <inlineHelpText>ID of the associated revenue split policy</inlineHelpText>
        <label>Split Policy</label>
        <referenceTo>Apttus_Config2__RevenueSplitPolicy__c</referenceTo>
        <relationshipLabel>Split Policy Entries</relationshipLabel>
        <relationshipName>SplitPolicyEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Revenue Split Policy Entry</label>
    <nameField>
        <displayFormat>PE-{0000000000}</displayFormat>
        <label>Policy Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Split Policy Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>